2016-08-22      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.1
        * anonymine_engine.py (hiscores, game_engine (play_game)):
            Added highscores for lost games.
        * anonymine_fields.py (generic_field (_call)): Check that won games
            really are won, any defect will automatically turn
            'win' into 'lose'.

2016-08-16      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.3.0
        * NEWS: Introduced 0.3
        * INSTALL: Warn of the removal of configuration files.
    0.2.32
        * anonymine.py (highscores_display), cursescfg: Use pseudo-tab-ish
            spacing between the columns and make horizontal scrolling in less
            faster.
            NOTICE: `highscores_display` now takes four arguments.

2016-08-15      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.2.31
        * anonymine.py: Set LESSSECURE=1

2016-08-13      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.2.30
        * README: It works again on Minix 3.3 and openindiana.
        * configure.py [openindiana]: INSTALL_CMD was changed to INSTALL in
            Makefile.static at version 0.1.17.  I forgot to change it in
            configure.py as well.
        * INSTALL: Added "INSTALL" as a recognized variable
        * anonymine_engine.py [Minix]: Guess what, Python 2.7 on Minix 3.3
            has no math module. Created a really dumb replacement.
        * anonymine.py [Minix]: Can't import subprocess either. Piping to
            less will fail, but that's a tolerable error.
    0.2.29
        * INSTALL: Windows notice removed. Added less(1) as a weak dependency.
        * `make dist`: Include "testcfg" as it's needed by something in
            test.py.
        * anonymine_engine.py (hiscores (display)): Bugfix:
            UnicodeDecodeError on localized weekday abbreviations.
        * anonymine.py (highscores_display): Bugfix: Encode the text before
            sending to less(1).